<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Iniciar_Sesion">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foreground="@drawable/night_in_hong_kong_iphone_x"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/night_in_hong_kong_iphone_x" />

    <EditText
        android:id="@+id/contrasenia2"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="@string/Contrasenia"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/Recuerdame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correo2" />

    <EditText
        android:id="@+id/correo2"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="@string/EMail"
        android:inputType="textEmailAddress"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/contrasenia2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="186dp"
        android:layout_height="0dp"
        android:layout_marginTop="177dp"
        android:layout_marginBottom="190dp"
        android:fontFamily="cursive"
        android:text="Orgalife"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/correo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="118dp"
        android:onClick="Validar"
        android:text="Iniciar Sesión"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Recuerdame" />

    <CheckBox
        android:id="@+id/Recuerdame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="#FFFFFF"
        android:checked="false"
        android:text="@string/Recordar"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintStart_toStartOf="@+id/contrasenia2"
        app:layout_constraintTop_toBottomOf="@+id/contrasenia2" />
</androidx.constraintlayout.widget.ConstraintLayout>